# rag-app

./: .gitignore  README.md  prompt.md  pyproject.toml
.github/workflows/: python-ci.yml
src/: __init__.py  main.py
src/utils/: __init__.py  embeddings.py  pdf_parser.py  vectorstore.py
tests/: test_pdf_parser.py
